--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 </div>
 <div style="text-align:center; text-decoration: none; font-size: 40px; margin-top: 25px;">
 <a href="#">Home</a>
-<a href="/public/about.html">About Me</a>
+<a href="https://github.com/samuelvictor2019/iZone.git/public/about.html">About Me</a>
 <a href="/public/stack.html">My Stacks</a>
 <a href="/public/contact.html">Contact</a>
 </div>
